<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Activity.MainActivity"
    >

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu"
        app:itemTextColor="@color/white"/>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/green"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toTopOf="@+id/chart_g4"
        app:layout_constraintEnd_toStartOf="@+id/chart_g2"
        app:layout_constraintStart_toStartOf="@+id/chart_g1"
        app:layout_constraintTop_toTopOf="@+id/chart_g3" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/lighting"
        app:layout_constraintBottom_toTopOf="@+id/chart_g5"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/txt_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/chart_g1"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />







    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/info_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_base">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:textColor="@color/infro_title_color"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline_6"
            app:layout_constraintStart_toStartOf="@+id/guideline_7"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/voltage"
            app:layout_constraintBottom_toTopOf="@+id/guideline_4"
            app:layout_constraintStart_toStartOf="@+id/guideline_7"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/voltage"
            android:textColor="@color/alpha_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />


        <TextView
            android:id="@+id/txt_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView" />


        <ImageView
            android:id="@+id/img_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cpu"
            app:layout_constraintBottom_toTopOf="@+id/guideline_4"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cpu"
            android:textColor="@color/alpha_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/img_2"
            app:layout_constraintTop_toTopOf="@+id/img_2" />


        <TextView
            android:id="@+id/txt_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_2"
            app:layout_constraintStart_toEndOf="@+id/img_2" />


        <ImageView
            android:id="@+id/img_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/plug"
            app:layout_constraintBottom_toTopOf="@+id/guideline_5"
            app:layout_constraintStart_toStartOf="@+id/guideline_7"
            app:layout_constraintTop_toTopOf="@+id/guideline_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/plug"
            android:textColor="@color/alpha_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/img_3"
            app:layout_constraintTop_toTopOf="@+id/img_3" />


        <TextView
            android:id="@+id/txt_plug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_3"
            app:layout_constraintStart_toEndOf="@+id/img_3" />


        <ImageView
            android:id="@+id/img_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/thermometer"
            app:layout_constraintBottom_toTopOf="@+id/guideline_5"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/thermometer"
            android:textColor="@color/alpha_text_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toEndOf="@+id/img_4"
            app:layout_constraintTop_toTopOf="@+id/img_4" />


        <TextView
            android:id="@+id/txt_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_4"
            app:layout_constraintStart_toEndOf="@+id/img_4" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline_6"
            app:layout_constraintStart_toStartOf="@+id/guideline_7" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:background="@color/line"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline_4"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:background="@color/line"
            app:layout_constraintBottom_toTopOf="@+id/guideline_4"
            app:layout_constraintEnd_toStartOf="@+id/guideline_6"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>